# tempora

./: .gitignore  .gitmodules  .hgtags  .travis.yml  CHANGES.rst  CHANGES.txt  NEWS.rst  README.rst  README.txt  __init__.py  conftest.py  datetools.py  mypy.ini  pyproject.toml  pytest.ini  schedule.py  setup.cfg  setup.py  tempora.py  timing.py  tools.py
.github/: FUNDING.yml
.github/workflows/: main.yml
docs/: conf.py  index.rst
jaraco/: timing.py
jaraco/dateutil/: __init__.py
jaraco/util/: timing.py
lib/: datetools.py
newsfragments/: +0f6aea93.feature.rst  +45048c4e.feature.rst  +a22f5957.feature.rst  +aa6cb219.feature.rst  26.bugfix.rst  29.feature.rst  31.feature.rst  40.feature.rst
tempora/: __init__.py  functools.py  schedule.py  timing.py  utc.py
tempora.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tempora/tests/: test_schedule.py  test_timing.py
tests/: test_schedule.py  test_timing.py
tests/compat/: py38.py
