[metadata]
name = tempora
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Objects and routines pertaining to date and time (tempora)
long_description = file:README.rst
url = https://github.com/jaraco/tempora
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.6
install_requires =
	pytz
	jaraco.functools>=1.20
	python-dateutil

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-flake8
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.0.1

	# local
	backports.unittest_mock
	freezegun
	pytest-freezegun
	types-freezegun
	types-pytz
	types-python-dateutil

docs =
	# upstream
	sphinx
	jaraco.packaging >= 8.2
	rst.linker >= 1.9

	# local

[options.entry_points]
console_scripts =
	calc-prorate = tempora:calculate_prorated_values
