[metadata]
name = tempora
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Objects and routines pertaining to date and time (tempora)
long_description = file:README.rst
url = https://github.com/jaraco/tempora
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.7
install_requires =
	pytz
	jaraco.functools>=1.20

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-flake8
	# workaround for tholo/pytest-flake8#87
	flake8 < 5
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.3

	# local
	backports.unittest_mock
	freezegun
	pytest-freezegun
	types-freezegun
	types-pytz

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9
	rst.linker >= 1.9
	jaraco.tidelift >= 1.4

	# local

[options.entry_points]
console_scripts =
	calc-prorate = tempora:calculate_prorated_values
